<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.subtree.filmclub.ui.activity.CinemaActivity" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_movie_cover"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/cv_poster_height"
            android:contentDescription="@string/movie_poster"
            android:layout_gravity="left"
            android:scaleType="fitStart"
            android:background="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            >

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_title_text_size"
                android:text="@string/movie_title"
                android:maxLines="2"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tv_movie_avg_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_title_sub_text_size"
                android:text="@string/movie_avg_rating"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tv_movie_votes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_title_sub_text_size"
                android:text="@string/movie_votes"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tv_movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/detail_overview_text_size"
        android:text="@string/movie_overview"
        android:textColor="@color/colorPrimary"/>


</LinearLayout>
</ScrollView>