<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_movie"
    android:layout_width="@dimen/cv_poster_width"
    android:layout_height="@dimen/cv_poster_height"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="4dp"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_movie_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_poster"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/cv_title_text_size"
                android:text="@string/movie_title"
                android:maxLines="2"
                android:textColor="@color/colorMovieTitle" />

            <TextView
                android:id="@+id/tv_movie_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/cv_title_sub_text_size"
                android:text="@string/movie_year"
                android:maxLines="1"
                android:textColor="@color/colorMovieSubTitle"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>